--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.2-3.4.2"
+version = "1.7.10-3.4.3"
 group= "xelitez.ironpp"
 archivesBaseName = "IronPressurePlates"
 
 minecraft {
-    version = "1.7.2-10.12.1.1060"
-    assetDir = "eclipse/assets"
+    version = "1.7.10-10.13.2.1291"
+    runDir = "eclipse/assets"
 }
 processResources
 {
